# offboard_path

./: README.md  package.xml  setup.cfg  setup.py
offboard_path/: odom_listener.py  odom_logger.py  offboard_ctrl_attitude.py  offboard_ctrl_hex.py  offboard_ctrl_omni.py  offboard_ctrl_omni_params.py  offboard_ctrl_omni_space.py  offboard_ctrl_quad.py  offboard_ctrl_quad_pos.py  offboard_ctrl_rewrite.py
trajectories/: 1m_Circle_0Yaw.csv  DESCRIPTIONS.txt  OMNI_1m_Circle_Rotation.csv  OMNI_Hover_Circle_Rotation.csv  OMNI_Hover_Rotate_2_axes.csv  OMNI_Hover_Rotate_360.csv  OMNI_L_Shaped_Inspection.csv
