<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>offboard_path</name>
  <version>1.0.0</version>
  <description>Utilize PX4 Offboard control via ROS2 pub/sub model to fly UAVs</description>
  <maintainer email="rmccar@unm.edu">rmccar</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>

  <depend>px4_msgs</depend>
  <depend>offboard_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
